# BAAssistant

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
include/: assets.h  frame.h  log.h  manager.h  recognizer.h
include/control/: iphone_mirror.h  window.h
include/game/: blue_archive.h
include/recognizer/: blue_archive.h  methods.h
include/utils/: opencv.h  words.h
src/: frame.mm  log.cpp  main.cpp  manager.cpp  recognizer.cpp
src/control/: iphone_mirror.mm  window.cpp
src/recognizer/: blue_archive.cpp  methods.cpp
src/utils/: opencv.cpp  words.cpp
